NLP TP's/texts/robotics/robotics.stackexchange_0000074499.txt
Q:

Errors in RGBDSLAM_v2 compiling from source

Hi to all,
I've some problems in compiling RGBDSLAM_v2 package from source https://github.com/felixendres/rgbdslam_v2
I've tried to compile the code as it's explained in Installation from Scratch but I get this errors:
In file included from /home/anna/rgbdslam_catkin_ws/src/rgbdslam_v2-indigo/src/node.cpp:32:0:
/home/anna/rgbdslam_catkin_ws/src/rgbdslam_v2-indigo/src/sift_gpu_wrapper.h:49:40: error: ‘cv::vector’ has not been declared
  void detect(const cv::Mat& image, cv::vector<cv::KeyPoint>& keypoints, std::vector<float>& descriptors, const cv::Mat& mask = cv::Mat()) const;
                                        ^
/home/anna/rgbdslam_catkin_ws/src/rgbdslam_v2-indigo/src/sift_gpu_wrapper.h:49:46: error: expected ‘,’ or ‘...’ before ‘<’ token
  void detect(const cv::Mat& image, cv::vector<cv::KeyPoint>& keypoints, std::vector<float>& descriptors, const cv::Mat& mask = cv::Mat()) const;
                                              ^
/home/anna/rgbdslam_catkin_ws/src/rgbdslam_v2-indigo/src/node.cpp: In constructor ‘Node::Node(const cv::Mat&, const cv::Mat&, const cv::Mat&, const CameraInfoConstPtr&, myHeader, cv::Ptr<cv::Feature2D>, cv::Ptr<cv::Feature2D>)’:
/home/anna/rgbdslam_catkin_ws/src/rgbdslam_v2-indigo/src/node.cpp:151:65: error: no matching function for call to ‘SiftGPUWrapper::detect(cv::Mat&, std::vector<cv::KeyPoint>&, std::vector<float>&)’
     siftgpu->detect(gray_img, feature_locations_2d_, descriptors);
                                                                 ^
/home/anna/rgbdslam_catkin_ws/src/rgbdslam_v2-indigo/src/node.cpp:151:65: note: candidate is:
In file included from /home/anna/rgbdslam_catkin_ws/src/rgbdslam_v2-indigo/src/node.cpp:32:0:
/home/anna/rgbdslam_catkin_ws/src/rgbdslam_v2-indigo/src/sift_gpu_wrapper.h:49:7: note: void SiftGPUWrapper::detect(const cv::Mat&, int) const
  void detect(const cv::Mat& image, cv::vector<cv::KeyPoint>& keypoints, std::vector<float>& descriptors, const cv::Mat& mask = cv::Mat()) const;
       ^
/home/anna/rgbdslam_catkin_ws/src/rgbdslam_v2-indigo/src/sift_gpu_wrapper.h:49:7: note:   candidate expects 2 arguments, 3 provided
/home/anna/rgbdslam_catkin_ws/src/rgbdslam_v2-indigo/src/node.cpp:170:67: error: no matching function for call to ‘SiftGPUWrapper::detect(cv::Mat&, std::vector<cv::KeyPoint>&, std::vector<float>&)’
       siftgpu->detect(gray_img, feature_locations_2d_, descriptors);
                                                                   ^
/home/anna/rgbdslam_catkin_ws/src/rgbdslam_v2-indigo/src/node.cpp:170:67: note: candidate is:
In file included from /home/anna/rgbdslam_catkin_ws/src/rgbdslam_v2-indigo/src/node.cpp:32:0:
/home/anna/rgbdslam_catkin_ws/src/rgbdslam_v2-indigo/src/sift_gpu_wrapper.h:49:7: note: void SiftGPUWrapper::detect(const cv::Mat&, int) const
  void detect(const cv::Mat& image, cv::vector<cv::KeyPoint>& keypoints, std::vector<float>& descriptors, const cv::Mat& mask = cv::Mat()) const;
       ^
/home/anna/rgbdslam_catkin_ws/src/rgbdslam_v2-indigo/src/sift_gpu_wrapper.h:49:7: note:   candidate expects 2 arguments, 3 provided
/home/anna/rgbdslam_catkin_ws/src/rgbdslam_v2-indigo/src/node.cpp: In constructor ‘Node::Node(cv::Mat, cv::Ptr<cv::Feature2D>, cv::Ptr<cv::Feature2D>, pcl::PointCloud<pcl::PointXYZRGB>::Ptr, cv::Mat)’:
/home/anna/rgbdslam_catkin_ws/src/rgbdslam_v2-indigo/src/node.cpp:283:65: error: no matching function for call to ‘SiftGPUWrapper::detect(cv::Mat&, std::vector<cv::KeyPoint>&, std::vector<float>&)’
     siftgpu->detect(gray_img, feature_locations_2d_, descriptors);
                                                                 ^
/home/anna/rgbdslam_catkin_ws/src/rgbdslam_v2-indigo/src/node.cpp:283:65: note: candidate is:
In file included from /home/anna/rgbdslam_catkin_ws/src/rgbdslam_v2-indigo/src/node.cpp:32:0:
/home/anna/rgbdslam_catkin_ws/src/rgbdslam_v2-indigo/src/sift_gpu_wrapper.h:49:7: note: void SiftGPUWrapper::detect(const cv::Mat&, int) const
  void detect(const cv::Mat& image, cv::vector<cv::KeyPoint>& keypoints, std::vector<float>& descriptors, const cv::Mat& mask = cv::Mat()) const;
       ^
/home/anna/rgbdslam_catkin_ws/src/rgbdslam_v2-indigo/src/sift_gpu_wrapper.h:49:7: note:   candidate expects 2 arguments, 3 provided
make[2]: *** [rgbdslam_v2-indigo/CMakeFiles/rgbdslam.dir/src/node.cpp.o] Error 1
make[2]: *** Waiting for unfinished jobs....
make[1]: *** [rgbdslam_v2-indigo/CMakeFiles/rgbdslam.dir/all] Error 2
make: *** [all] Error 2
make: INTERNAL: Exiting with 13 jobserver tokens available; should be 12!

how can I resolve?
Thanks, best
Anna

Originally posted by anna on ROS Answers with karma: 26 on 2016-06-13
Post score: 0

A:

Thanks to all, I've solved.
I have two versions of OpenCV on my computer, and system gets the wrong one.
Anna

Originally posted by anna with karma: 26 on 2016-06-14
This answer was ACCEPTED on the original site
Post score: 0

Original comments
Comment by alubitz on 2016-06-28:
Hi, which Version are you using?
Did you compile one yourself? And if so, do you have a tutorial to follow?
Thanks in advance!
Comment by alubitz on 2016-07-05:
Compiled Version 2.4 from source.
Important to use this cmake Options: cmake -D CMAKE_BUILD_TYPE=RELEASE -D WITH_OPENCL=OFF -D CMAKE_INSTALL_PREFIX=/usr/local

